--- a/urself/Base.lproj/Main.storyboard
+++ b/urself/Base.lproj/Main.storyboard
@@ -2345,8 +2345,8 @@
         <image name="underwater" width="1733" height="1300"/>
     </resources>
     <inferredMetricsTieBreakers>
-        <segue reference="rJ3-yE-Sop"/>
-        <segue reference="ift-Qz-p3s"/>
+        <segue reference="fLS-Fb-NW2"/>
+        <segue reference="OPV-Mm-dgK"/>
         <segue reference="Ajy-jL-cXu"/>
         <segue reference="weP-Uz-2Ke"/>
         <segue reference="ywO-RN-kWl"/>
